compiler/antlr_generate/ParserParser.cpp

    #include <vector>
    #include <utility>


// Generated from ./grammarrule/Parser.g4 by ANTLR 4.8


#include "ParserListener.h"
#include "ParserVisitor.h"

#include "ParserParser.h"


using namespace antlrcpp;
using namespace antlr4;

ParserParser::ParserParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ParserParser::~ParserParser() {
  delete _interpreter;
}

std::string ParserParser::getGrammarFileName() const {
  return "Parser.g4";
}

const std::vector<std::string>& ParserParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ParserParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Comp_unitContext ------------------------------------------------------------------

ParserParser::Comp_unitContext::Comp_unitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ParserParser::Comp_unitContext::EOF() {
  return getToken(ParserParser::EOF, 0);
}

std::vector<ParserParser::DeclContext *> ParserParser::Comp_unitContext::decl() {
  return getRuleContexts<ParserParser::DeclContext>();
}

ParserParser::DeclContext* ParserParser::Comp_unitContext::decl(size_t i) {
  return getRuleContext<ParserParser::DeclContext>(i);
}

std::vector<ParserParser::Func_defContext *> ParserParser::Comp_unitContext::func_def() {
  return getRuleContexts<ParserParser::Func_defContext>();
}

ParserParser::Func_defContext* ParserParser::Comp_unitContext::func_def(size_t i) {
  return getRuleContext<ParserParser::Func_defContext>(i);
}


size_t ParserParser::Comp_unitContext::getRuleIndex() const {
  return ParserParser::RuleComp_unit;
}

void ParserParser::Comp_unitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComp_unit(this);
}

void ParserParser::Comp_unitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComp_unit(this);
}


antlrcpp::Any ParserParser::Comp_unitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ParserVisitor*>(visitor))
    return parserVisitor->visitComp_unit(this);
  else
    return visitor->visitChildren(this);
}

ParserParser::Comp_unitContext* ParserParser::comp_unit() {
  Comp_unitContext *_localctx = _tracker.createInstance<Comp_unitContext>(_ctx, getState());
  enterRule(_localctx, 0, ParserParser::RuleComp_unit);

              dynamic_cast<Comp_unitContext *>(_localctx)->decl_vec =  std::vector<std::pair<int, DeclContext*>>();
              dynamic_cast<Comp_unitContext *>(_localctx)->func_def_vec =  std::vector<std::pair<int, Func_defContext*>>();
          
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ParserParser::Int)
      | (1ULL << ParserParser::Float)
      | (1ULL << ParserParser::Void)
      | (1ULL << ParserParser::Const))) != 0)) {
      setState(70);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(64);
        dynamic_cast<Comp_unitContext *>(_localctx)->declContext = decl();
        _localctx->decl_vec.push_back({_localctx->i, dynamic_cast<Comp_unitContext *>(_localctx)->declContext}); _localctx->i++;
        break;
      }

      case 2: {
        setState(67);
        dynamic_cast<Comp_unitContext *>(_localctx)->func_defContext = func_def();
        _localctx->func_def_vec.push_back({_localctx->i, dynamic_cast<Comp_unitContext *>(_localctx)->func_defContext}); _localctx->i++;
        break;
      }

      }
      setState(74);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(75);
    match(ParserParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

ParserParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ParserParser::Const_declContext* ParserParser::DeclContext::const_decl() {
  return getRuleContext<ParserParser::Const_declContext>(0);
}

ParserParser::Var_declContext* ParserParser::DeclContext::var_decl() {
  return getRuleContext<ParserParser::Var_declContext>(0);
}


size_t ParserParser::DeclContext::getRuleIndex() const {
  return ParserParser::RuleDecl;
}

void ParserParser::DeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecl(this);
}

void ParserParser::DeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecl(this);
}


antlrcpp::Any ParserParser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ParserVisitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

ParserParser::DeclContext* ParserParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 2, ParserParser::RuleDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(79);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ParserParser::Const: {
        enterOuterAlt(_localctx, 1);
        setState(77);
        const_decl();
        break;
      }

      case ParserParser::Int:
      case ParserParser::Float: {
        enterOuterAlt(_localctx, 2);
        setState(78);
        var_decl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Const_declContext ------------------------------------------------------------------

ParserParser::Const_declContext::Const_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ParserParser::Const_declContext::Const() {
  return getToken(ParserParser::Const, 0);
}

ParserParser::BtypeContext* ParserParser::Const_declContext::btype() {
  return getRuleContext<ParserParser::BtypeContext>(0);
}

std::vector<ParserParser::Const_defContext *> ParserParser::Const_declContext::const_def() {
  return getRuleContexts<ParserParser::Const_defContext>();
}

ParserParser::Const_defContext* ParserParser::Const_declContext::const_def(size_t i) {
  return getRuleContext<ParserParser::Const_defContext>(i);
}


size_t ParserParser::Const_declContext::getRuleIndex() const {
  return ParserParser::RuleConst_decl;
}

void ParserParser::Const_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConst_decl(this);
}

void ParserParser::Const_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConst_decl(this);
}


antlrcpp::Any ParserParser::Const_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ParserVisitor*>(visitor))
    return parserVisitor->visitConst_decl(this);
  else
    return visitor->visitChildren(this);
}

ParserParser::Const_declContext* ParserParser::const_decl() {
  Const_declContext *_localctx = _tracker.createInstance<Const_declContext>(_ctx, getState());
  enterRule(_localctx, 4, ParserParser::RuleConst_decl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(ParserParser::Const);
    setState(82);
    btype();
    setState(83);
    const_def();
    setState(88);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ParserParser::T__0) {
      setState(84);
      match(ParserParser::T__0);
      setState(85);
      const_def();
      setState(90);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(91);
    match(ParserParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BtypeContext ------------------------------------------------------------------

ParserParser::BtypeContext::BtypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ParserParser::BtypeContext::Int() {
  return getToken(ParserParser::Int, 0);
}

tree::TerminalNode* ParserParser::BtypeContext::Float() {
  return getToken(ParserParser::Float, 0);
}


size_t ParserParser::BtypeContext::getRuleIndex() const {
  return ParserParser::RuleBtype;
}

void ParserParser::BtypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBtype(this);
}

void ParserParser::BtypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBtype(this);
}


antlrcpp::Any ParserParser::BtypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ParserVisitor*>(visitor))
    return parserVisitor->visitBtype(this);
  else
    return visitor->visitChildren(this);
}

ParserParser::BtypeContext* ParserParser::btype() {
  BtypeContext *_localctx = _tracker.createInstance<BtypeContext>(_ctx, getState());
  enterRule(_localctx, 6, ParserParser::RuleBtype);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    _la = _input->LA(1);
    if (!(_la == ParserParser::Int

    || _la == ParserParser::Float)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Const_defContext ------------------------------------------------------------------

ParserParser::Const_defContext::Const_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ParserParser::Const_defContext::Id() {
  return getToken(ParserParser::Id, 0);
}

tree::TerminalNode* ParserParser::Const_defContext::Assign() {
  return getToken(ParserParser::Assign, 0);
}

ParserParser::Const_init_valContext* ParserParser::Const_defContext::const_init_val() {
  return getRuleContext<ParserParser::Const_init_valContext>(0);
}

std::vector<tree::TerminalNode *> ParserParser::Const_defContext::Lsb() {
  return getTokens(ParserParser::Lsb);
}

tree::TerminalNode* ParserParser::Const_defContext::Lsb(size_t i) {
  return getToken(ParserParser::Lsb, i);
}

std::vector<ParserParser::Const_expContext *> ParserParser::Const_defContext::const_exp() {
  return getRuleContexts<ParserParser::Const_expContext>();
}

ParserParser::Const_expContext* ParserParser::Const_defContext::const_exp(size_t i) {
  return getRuleContext<ParserParser::Const_expContext>(i);
}

std::vector<tree::TerminalNode *> ParserParser::Const_defContext::Rsb() {
  return getTokens(ParserParser::Rsb);
}

tree::TerminalNode* ParserParser::Const_defContext::Rsb(size_t i) {
  return getToken(ParserParser::Rsb, i);
}


size_t ParserParser::Const_defContext::getRuleIndex() const {
  return ParserParser::RuleConst_def;
}

void ParserParser::Const_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConst_def(this);
}

void ParserParser::Const_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConst_def(this);
}


antlrcpp::Any ParserParser::Const_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ParserVisitor*>(visitor))
    return parserVisitor->visitConst_def(this);
  else
    return visitor->visitChildren(this);
}

ParserParser::Const_defContext* ParserParser::const_def() {
  Const_defContext *_localctx = _tracker.createInstance<Const_defContext>(_ctx, getState());
  enterRule(_localctx, 8, ParserParser::RuleConst_def);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    match(ParserParser::Id);
    setState(102);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ParserParser::Lsb) {
      setState(96);
      match(ParserParser::Lsb);
      setState(97);
      const_exp();
      setState(98);
      match(ParserParser::Rsb);
      setState(104);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(105);
    match(ParserParser::Assign);
    setState(106);
    const_init_val();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Const_init_valContext ------------------------------------------------------------------

ParserParser::Const_init_valContext::Const_init_valContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ParserParser::Const_expContext* ParserParser::Const_init_valContext::const_exp() {
  return getRuleContext<ParserParser::Const_expContext>(0);
}

std::vector<ParserParser::Const_init_valContext *> ParserParser::Const_init_valContext::const_init_val() {
  return getRuleContexts<ParserParser::Const_init_valContext>();
}

ParserParser::Const_init_valContext* ParserParser::Const_init_valContext::const_init_val(size_t i) {
  return getRuleContext<ParserParser::Const_init_valContext>(i);
}


size_t ParserParser::Const_init_valContext::getRuleIndex() const {
  return ParserParser::RuleConst_init_val;
}

void ParserParser::Const_init_valContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConst_init_val(this);
}

void ParserParser::Const_init_valContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConst_init_val(this);
}


antlrcpp::Any ParserParser::Const_init_valContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ParserVisitor*>(visitor))
    return parserVisitor->visitConst_init_val(this);
  else
    return visitor->visitChildren(this);
}

ParserParser::Const_init_valContext* ParserParser::const_init_val() {
  Const_init_valContext *_localctx = _tracker.createInstance<Const_init_valContext>(_ctx, getState());
  enterRule(_localctx, 10, ParserParser::RuleConst_init_val);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(121);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ParserParser::SLp:
      case ParserParser::Add:
      case ParserParser::Sub:
      case ParserParser::Not:
      case ParserParser::Id:
      case ParserParser::IntConst:
      case ParserParser::FloatConst: {
        enterOuterAlt(_localctx, 1);
        setState(108);
        const_exp();
        break;
      }

      case ParserParser::T__2: {
        enterOuterAlt(_localctx, 2);
        setState(109);
        match(ParserParser::T__2);
        setState(118);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << ParserParser::T__2)
          | (1ULL << ParserParser::SLp)
          | (1ULL << ParserParser::Add)
          | (1ULL << ParserParser::Sub)
          | (1ULL << ParserParser::Not)
          | (1ULL << ParserParser::Id)
          | (1ULL << ParserParser::IntConst)
          | (1ULL << ParserParser::FloatConst))) != 0)) {
          setState(110);
          const_init_val();
          setState(115);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == ParserParser::T__0) {
            setState(111);
            match(ParserParser::T__0);
            setState(112);
            const_init_val();
            setState(117);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(120);
        match(ParserParser::T__3);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_declContext ------------------------------------------------------------------

ParserParser::Var_declContext::Var_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ParserParser::BtypeContext* ParserParser::Var_declContext::btype() {
  return getRuleContext<ParserParser::BtypeContext>(0);
}

std::vector<ParserParser::Var_defContext *> ParserParser::Var_declContext::var_def() {
  return getRuleContexts<ParserParser::Var_defContext>();
}

ParserParser::Var_defContext* ParserParser::Var_declContext::var_def(size_t i) {
  return getRuleContext<ParserParser::Var_defContext>(i);
}


size_t ParserParser::Var_declContext::getRuleIndex() const {
  return ParserParser::RuleVar_decl;
}

void ParserParser::Var_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_decl(this);
}

void ParserParser::Var_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_decl(this);
}


antlrcpp::Any ParserParser::Var_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ParserVisitor*>(visitor))
    return parserVisitor->visitVar_decl(this);
  else
    return visitor->visitChildren(this);
}

ParserParser::Var_declContext* ParserParser::var_decl() {
  Var_declContext *_localctx = _tracker.createInstance<Var_declContext>(_ctx, getState());
  enterRule(_localctx, 12, ParserParser::RuleVar_decl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(123);
    btype();
    setState(124);
    var_def();
    setState(129);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ParserParser::T__0) {
      setState(125);
      match(ParserParser::T__0);
      setState(126);
      var_def();
      setState(131);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(132);
    match(ParserParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_defContext ------------------------------------------------------------------

ParserParser::Var_defContext::Var_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ParserParser::Var_defContext::Id() {
  return getToken(ParserParser::Id, 0);
}

std::vector<tree::TerminalNode *> ParserParser::Var_defContext::Lsb() {
  return getTokens(ParserParser::Lsb);
}

tree::TerminalNode* ParserParser::Var_defContext::Lsb(size_t i) {
  return getToken(ParserParser::Lsb, i);
}

std::vector<ParserParser::Const_expContext *> ParserParser::Var_defContext::const_exp() {
  return getRuleContexts<ParserParser::Const_expContext>();
}

ParserParser::Const_expContext* ParserParser::Var_defContext::const_exp(size_t i) {
  return getRuleContext<ParserParser::Const_expContext>(i);
}

std::vector<tree::TerminalNode *> ParserParser::Var_defContext::Rsb() {
  return getTokens(ParserParser::Rsb);
}

tree::TerminalNode* ParserParser::Var_defContext::Rsb(size_t i) {
  return getToken(ParserParser::Rsb, i);
}

tree::TerminalNode* ParserParser::Var_defContext::Assign() {
  return getToken(ParserParser::Assign, 0);
}

ParserParser::Init_valContext* ParserParser::Var_defContext::init_val() {
  return getRuleContext<ParserParser::Init_valContext>(0);
}


size_t ParserParser::Var_defContext::getRuleIndex() const {
  return ParserParser::RuleVar_def;
}

void ParserParser::Var_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_def(this);
}

void ParserParser::Var_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_def(this);
}


antlrcpp::Any ParserParser::Var_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ParserVisitor*>(visitor))
    return parserVisitor->visitVar_def(this);
  else
    return visitor->visitChildren(this);
}

ParserParser::Var_defContext* ParserParser::var_def() {
  Var_defContext *_localctx = _tracker.createInstance<Var_defContext>(_ctx, getState());
  enterRule(_localctx, 14, ParserParser::RuleVar_def);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(156);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(134);
      match(ParserParser::Id);
      setState(141);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == ParserParser::Lsb) {
        setState(135);
        match(ParserParser::Lsb);
        setState(136);
        const_exp();
        setState(137);
        match(ParserParser::Rsb);
        setState(143);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(144);
      match(ParserParser::Id);
      setState(151);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == ParserParser::Lsb) {
        setState(145);
        match(ParserParser::Lsb);
        setState(146);
        const_exp();
        setState(147);
        match(ParserParser::Rsb);
        setState(153);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(154);
      match(ParserParser::Assign);
      setState(155);
      init_val();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Init_valContext ------------------------------------------------------------------

ParserParser::Init_valContext::Init_valContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ParserParser::ExpContext* ParserParser::Init_valContext::exp() {
  return getRuleContext<ParserParser::ExpContext>(0);
}

std::vector<ParserParser::Init_valContext *> ParserParser::Init_valContext::init_val() {
  return getRuleContexts<ParserParser::Init_valContext>();
}

ParserParser::Init_valContext* ParserParser::Init_valContext::init_val(size_t i) {
  return getRuleContext<ParserParser::Init_valContext>(i);
}


size_t ParserParser::Init_valContext::getRuleIndex() const {
  return ParserParser::RuleInit_val;
}

void ParserParser::Init_valContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInit_val(this);
}

void ParserParser::Init_valContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInit_val(this);
}


antlrcpp::Any ParserParser::Init_valContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ParserVisitor*>(visitor))
    return parserVisitor->visitInit_val(this);
  else
    return visitor->visitChildren(this);
}

ParserParser::Init_valContext* ParserParser::init_val() {
  Init_valContext *_localctx = _tracker.createInstance<Init_valContext>(_ctx, getState());
  enterRule(_localctx, 16, ParserParser::RuleInit_val);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(171);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ParserParser::SLp:
      case ParserParser::Add:
      case ParserParser::Sub:
      case ParserParser::Not:
      case ParserParser::Id:
      case ParserParser::IntConst:
      case ParserParser::FloatConst: {
        enterOuterAlt(_localctx, 1);
        setState(158);
        exp();
        break;
      }

      case ParserParser::T__2: {
        enterOuterAlt(_localctx, 2);
        setState(159);
        match(ParserParser::T__2);
        setState(168);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << ParserParser::T__2)
          | (1ULL << ParserParser::SLp)
          | (1ULL << ParserParser::Add)
          | (1ULL << ParserParser::Sub)
          | (1ULL << ParserParser::Not)
          | (1ULL << ParserParser::Id)
          | (1ULL << ParserParser::IntConst)
          | (1ULL << ParserParser::FloatConst))) != 0)) {
          setState(160);
          init_val();
          setState(165);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == ParserParser::T__0) {
            setState(161);
            match(ParserParser::T__0);
            setState(162);
            init_val();
            setState(167);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(170);
        match(ParserParser::T__3);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_defContext ------------------------------------------------------------------

ParserParser::Func_defContext::Func_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ParserParser::Func_typeContext* ParserParser::Func_defContext::func_type() {
  return getRuleContext<ParserParser::Func_typeContext>(0);
}

tree::TerminalNode* ParserParser::Func_defContext::Id() {
  return getToken(ParserParser::Id, 0);
}

tree::TerminalNode* ParserParser::Func_defContext::SLp() {
  return getToken(ParserParser::SLp, 0);
}

tree::TerminalNode* ParserParser::Func_defContext::SRp() {
  return getToken(ParserParser::SRp, 0);
}

ParserParser::BlockContext* ParserParser::Func_defContext::block() {
  return getRuleContext<ParserParser::BlockContext>(0);
}

ParserParser::Func_f_paramsContext* ParserParser::Func_defContext::func_f_params() {
  return getRuleContext<ParserParser::Func_f_paramsContext>(0);
}


size_t ParserParser::Func_defContext::getRuleIndex() const {
  return ParserParser::RuleFunc_def;
}

void ParserParser::Func_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunc_def(this);
}

void ParserParser::Func_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunc_def(this);
}


antlrcpp::Any ParserParser::Func_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ParserVisitor*>(visitor))
    return parserVisitor->visitFunc_def(this);
  else
    return visitor->visitChildren(this);
}

ParserParser::Func_defContext* ParserParser::func_def() {
  Func_defContext *_localctx = _tracker.createInstance<Func_defContext>(_ctx, getState());
  enterRule(_localctx, 18, ParserParser::RuleFunc_def);
  size_t _la = 0;
